# my_harmony

./: .gitignore  1.html  123.txt  2.html  3.html  48项目波形数据显示说明.md  5.html  API接口文档.md  FSM_CMD_STATISTICS数据字段清单.md  HTTP服务器文档.md  OPTIMIZATION_SUGGESTIONS.md  PERFORMANCE_ANALYSIS.md  README.en.md  README.md  README使用文档.md  README详细文档.md  TCP数据包结构说明.md  TCP数据接收实现总结.md  TCP数据接收说明.md  TCP服务器访问说明.md  TCP测试数据发送说明.md  TODO.md  TROUBLESHOOTING.md  analyze_memory.py  build-profile.json5  db_tables.txt  db_tables.xlsx  harmony.db  mem_monitor_Error.csv  mem_monitor_com.nutpi.My_Project.csv  mem_watch.ps1  mock_device.py  oh-package-lock.json5  oh-package.json5  output_all_data_pack.json  performance_test_client.py  select_all.json  tablename.txt  tcp_complete_test.py  tcp_config_test.py  (+24 more)
AppScope/: app.json5
docs/: ArkTS知识点速查.md  README_CodeReview.md  README_Infrastructure.md  (+4 more)
entry/src/main/cpp/: CMakeLists.txt  native_helper.cpp  native_module.cpp  native_module.h
entry/src/main/cpp/Http/: httpfileinforequest.cpp  httpfileinforequest.h  httpfileinforesponse.cpp  httpfileinforesponse.h  httphelper.cpp  httphelper.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h
entry/src/main/cpp/Http/Api/: apihelper.cpp  apihelper.h
entry/src/main/cpp/Tcp/: socketserver.cpp  socketserver.h  structures.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  udpclient.cpp  udpclient.h  udpserver.cpp  udpserver.h
entry/src/main/cpp/Websocket/: websocketclient.cpp  websocketclient.h
entry/src/main/cpp/types/libnative_module/: index.d.ts  oh-package.json5
(+627 files in other folders)
